# fomus

./: .clang-format  .gitignore  ChangeLog  Makefile.am  README  README.md  TODO  bootstrap.sh  configure.ac
doc/: Makefile.am  doc.texi  ex001.fms  ex002.fms  ex003.fms  ex004.fms  ex005.fms  ex006.fms  ex007.fms  ex008.fms  ex009.fms  ex010.fms  ex011.fms  ex012.fms  ex013.fms  ex014.fms  ex015.fms  ex016.fms  ex017.fms  ex018.fms  ex019.fms  ex020.fms  ex021.fms  ex022.fms  ex023.fms  ex024.fms  ex025.fms  ex026.fms  ex027.fms  ex028.fms  ex029.fms  ex030.fms  ex031.fms  ex032.fms  ex033.fms  ex034.fms  ex035.fms  ex036.fms  ex037.fms  ex038.fms  (+229 more)
libltdl/: argz_.h
src/: Makefile.am
src/data/: Makefile.am  common.fpr  contemp.fpr  draft.fpr  fomus.conf  fomus.el.in  nottonal.fpr  quality.fpr  tonal.fpr
src/exe/: Makefile.am  main.cc
src/iface/: Makefile.am
src/iface/lisp/: Makefile.am  fomus.asd  fomus.lisp.in  fomus1.lisp.in  fomus2.lisp.in  fomuscffi.i  fomusmod.asd  fomusmod.lisp.in  mod1.lisp.in  mod2.lisp.in  modcffi.i
src/iface/pd/: Makefile.am  fomus.pd  pdin.cc
src/iface/scheme/: Makefile.am  fomuschicken.i
src/lib/: Makefile.am  algext.h  api.cc  classes.cc  classes.h  data.cc  data.h  error.cc  error.h  heads.h  info.cc  instrs.cc  instrs.h  intern.cc  intern.h  marks.cc  marks.h  mods.cc  mods.h  moremath.h  numbers.cc  numbers.h  paractstrs1.cc.in  paractstrs2.cc.in  paractstrs3.cc.in  parse.cc  parse.h  parseins.h  schedr.cc  schedr.h  userstrs.cc  userstrs.h  util.cc  vars.cc  vars.h
src/lib/api/: Makefile.am  basetypes.h  export.h  fomus.h  fomusapi.h  infoapi.h  modtypes1.h.in  modtypes2.h.in  modtypes3.h.in  module.h  modutil.h
src/lib/mod/: Makefile.am
src/lib/mod/accs/: Makefile.am  accs.cc  cautaccs.cc  postaccs.cc
src/lib/mod/beams/: Makefile.am  beams.cc
src/lib/mod/check/: Makefile.am  ranges.cc
src/lib/mod/common/: Makefile.am  debugaux.h  ferraux.h  foutaux.h  ftimeaux.h  ilessaux.h  marksaux.h
src/lib/mod/div/: Makefile.am  divide.cc  grdiv.cc  grdiv.h  untie.cc
src/lib/mod/divrls/: Makefile.am  divrules.cc  ifacedivrules.h
src/lib/mod/dyns/: Makefile.am  dyns.cc  phrdyns.cc  repdyns.cc
src/lib/mod/eng/: Makefile.am  bfsearch.cc  divsearch.cc  dumb.cc  dumb.h  dynprog.cc  ifacedivsearch.h  ifacedumb.h  ifacesearch.h
src/lib/mod/in/: Makefile.am  fmsin.cc  midiin.cc
src/lib/mod/marks/: Makefile.am  grslurs.cc  markevs1.cc  markevs1.h  markevs2.cc  markevs2.h  markgrps.cc  marks.cc  marks.h  smarks.h  vmarks.h  vsmarks.cc
src/lib/mod/meas/: Makefile.am  meas.cc  meas.h
src/lib/mod/octs/: Makefile.am  octs.cc
src/lib/mod/parts/: Makefile.am  mparts.cc  mparts.h  parts.cc
src/lib/mod/quant/: Makefile.am  grtquant.cc  pquant.cc  tquant.cc
src/lib/mod/special/: Makefile.am  harms.cc  percchs.cc  pnotes.cc  pnotes.h  tpose.cc  trems.cc
src/lib/mod/staves/: Makefile.am  rstaves.cc  rstaves.h  staves.cc
src/lib/mod/voices/: Makefile.am  merge.cc  prune.cc  prune.h  voices.cc
src/test/: Makefile.am  dotfomus  grace.sal  in001.fms  in001.lisp  in002.fms  in002.lisp  in003.fms  in003.lisp  in004.fms  in005.fms  in006.fms  in007.fms  in008.fms  in009.fms  in010.fms  in011.fms  in012.fms  in013.fms  in014.fms  in015.fms  in016.fms  in017.fms  in018.fms  in019.fms  in020.fms  in021.fms  in022.fms  in023.fms  in024.fms  in025.fms  in026.fms  in027.fms  in028.fms  in029.fms  in030.fms  in031.fms  in032.fms  in033.fms  out1.html.in  (+2 more)
